<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.oaksdance.navigationdemo.ui.fragment.net.hot.HotFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_big"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hot_switch"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_title" />

        <Switch
            android:id="@+id/sc_wifi"
            style="@style/SwitchStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:checked="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/divider" />

    <com.jidouauto.ui.oushang.routeBar.JRouteBar
        android:id="@+id/rb_hot_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_big"
        android:layout_gravity="center_vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        app:title="@string/hot_name" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/divider" />

    <com.jidouauto.ui.oushang.routeBar.JRouteBar
        android:id="@+id/rb_hot_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_big"
        android:layout_gravity="center_vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        app:title="@string/hot_password" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/divider" />
</LinearLayout>