<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_top_padding"
    android:paddingEnd="@dimen/fragment_horizontal_margin"
    tools:context="com.oaksdance.navigationdemo.ui.fragment.net.hot.UpdateNameFragment">

    <com.jidouauto.ui.oushang.widget.JButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/tab_btn_height"
        android:drawableStart="@mipmap/ic_back"
        android:drawablePadding="@dimen/tip_space"
        android:gravity="center_vertical"
        android:text="@string/equipment_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_big"
        android:layout_marginTop="@dimen/fragment_content_top"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equipment_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_title" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="text"
            android:maxLines="1"
            android:text="@string/equipment_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_title" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="83.2dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_save"
            style="@style/SolidButtonStyle"
            android:text="@string/save" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/HollowButtonStyle"
            android:layout_marginStart="56dp"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>